--- a/static/index.html
+++ b/static/index.html
@@ -1,12 +1,4 @@
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-        <title>SynapNote</title>
-    </head>
-    
-    <body>
-        
-    </body>
-</html>
+{% extends 'base.html' %}
+{% block main %}
+<h1>hello bun and nunjucks</h1>
+{% endblock %}
