--- a/static/index.html
+++ b/static/index.html
@@ -1,4 +1,8 @@
-{% extends 'base.html' %}
-{% block main %}
-<h1>hello bun and nunjucks</h1>
+{% extends '-layout.html' %}
+{% block content %}
+<section class="hero">
+    <h1>The simple and comprehensive note-taking platform for the modern student</h1>
+    <p>No more piles of handwritten notes. Study efficiently with SynapNote.</p>
+    <button type="button" class="btn btn-primary">Get Started for Free</button>
+</section>
 {% endblock %}
