--- a/static/index.html
+++ b/static/index.html
@@ -3,6 +3,8 @@
 <section class="hero">
     <h1>The simple and comprehensive note-taking platform for the modern student</h1>
     <p>No more piles of handwritten notes. Study efficiently with SynapNote.</p>
-    <button type="button" class="btn btn-primary">Get Started for Free</button>
+    <a href="/register">
+        <button type="button" class="btn btn-primary">Get Started for Free</button>
+    </a>
 </section>
 {% endblock %}
