--- a/static/-base.html
+++ b/static/-base.html
@@ -20,6 +20,7 @@
     <!-- stylesheets -->
     <link rel="stylesheet" href="./assets/css/utils.css">
     <link rel="stylesheet" href="./assets/css/common.css">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
     <link rel="stylesheet" href="./assets/css/themes/light.css">
 </head>
 
