--- a/static/login.html
+++ b/static/login.html
@@ -3,15 +3,12 @@
 <section class="middle">
     <h3>Login</h3>
     <p>We're happy to have you back!</p>
-    <form action="/login" method="post">
+    <form action="/api/v1/login" method="post">
         <div class="mb-1">
-            <input type="email" name="email" class="form-control" id="email" placeholder="Email address">
+            <input type="email" name="email" class="form-control" id="email" placeholder="Email address" required>
         </div>
         <div class="mb-1">
-            <input type="text" name="name" class="form-control" id="email" placeholder="Username">
-        </div>
-        <div class="mb-1">
-            <input type="password" name="password" class="form-control" id="email" placeholder="Password">
+            <input type="password" name="password" class="form-control" id="email" placeholder="Password" required>
         </div>
         <button type="submit" class="btn btn-primary" style="width: 100%; margin: 0px;">Submit</button>
     </form>
