--- a/static/register.html
+++ b/static/register.html
@@ -3,20 +3,32 @@
 <section class="middle">
     <h3>Sign Up</h3>
     <p>Get started for free.</p>
-    <form action="/register" method="post">
+    <form action="/api/v1/register" method="post">
         <div class="mb-1">
-            <input type="email" name="email" class="form-control" id="email" placeholder="Email address">
+            <input type="email" name="email" class="form-control" id="email" placeholder="Email address" required>
         </div>
         <div class="mb-1">
-            <input type="text" name="name" class="form-control" id="email" placeholder="Username">
+            <input type="text" name="name" class="form-control" id="email" placeholder="Username" required min-length="2" max-length="32">
         </div>
         <div class="mb-1">
-            <input type="password" name="password" class="form-control" id="email" placeholder="Password">
+            <input type="password" name="password" class="form-control" id="email" placeholder="Password" required min-length="8" max-length="32" onChange="onChange()">
         </div>
         <div class="mb-1">
-            <input type="password" name="confirmPassword" class="form-control" id="email" placeholder="Confirm Password">
+            <input type="password" name="confirmPassword" class="form-control" id="email" placeholder="Confirm Password" required onChange="onChange()">
         </div>
         <button type="submit" class="btn btn-primary" style="width: 100%; margin: 0px;">Submit</button>
     </form>
+    <script>
+        function onChange() {
+            const password = document.querySelector('input[name=password]');
+            const confirm = document.querySelector('input[name=confirmPassword]');
+
+            if (confirm.value === password.value) {
+                confirm.setCustomValidity('');
+            } else {
+                confirm.setCustomValidity('Passwords do not match');
+            }
+        }
+    </script>
 </section>
 {% endblock %}
