--- a/static/register.html
+++ b/static/register.html
@@ -3,7 +3,7 @@
 <section class="middle">
     <h3>Sign Up</h3>
     <p>Get started for free.</p>
-    <form action="/register" method="post">
+    <form action="/api/v1/register" method="post">
         <div class="mb-1">
             <input type="email" name="email" class="form-control" id="email" placeholder="Email address">
         </div>
