--- a/static/login.html
+++ b/static/login.html
@@ -3,7 +3,7 @@
 <section class="middle">
     <h3>Login</h3>
     <p>We're happy to have you back!</p>
-    <form action="/login" method="post">
+    <form action="/api/v1/login" method="post">
         <div class="mb-1">
             <input type="email" name="email" class="form-control" id="email" placeholder="Email address">
         </div>
