render error messages

--- a/static/-base.html
+++ b/static/-base.html
@@ -40,6 +40,8 @@
     <!-- scripts -->
     <script src="./assets/js/themes.js"></script>
     <script src="./assets/js/header-typed.js"></script>
+    <script src="./assets/js/register.js"></script>
+    <script src="./assets/js/login.js"></script>
 </body>
 
 </html>
