--- a/static/register.html
+++ b/static/register.html
@@ -3,20 +3,24 @@
 <section class="middle">
     <h3>Sign Up</h3>
     <p>Get started for free.</p>
-    <form action="/api/v1/register" method="post">
+    <form action="/api/v1/register" method="post" id="register-form">
+        <div class="mb-1 val" id="register-error">
+            
+        </div>
         <div class="mb-1">
             <input type="email" name="email" class="form-control" id="email" placeholder="Email address">
         </div>
         <div class="mb-1">
-            <input type="text" name="name" class="form-control" id="email" placeholder="Username">
+            <input type="text" name="name" class="form-control" id="name" placeholder="Username">
         </div>
         <div class="mb-1">
-            <input type="password" name="password" class="form-control" id="email" placeholder="Password">
+            <input type="password" name="password" class="form-control" id="password" placeholder="Password">
         </div>
         <div class="mb-1">
-            <input type="password" name="confirmPassword" class="form-control" id="email" placeholder="Confirm Password">
+            <input type="password" name="confirmPassword" class="form-control" id="confirmPassword" placeholder="Confirm Password">
         </div>
         <button type="submit" class="btn btn-primary" style="width: 100%; margin: 0px;">Submit</button>
     </form>
+    <p class="mt-5">Already have an account? <br><a href="/login">Login instead</a>.</p>
 </section>
 {% endblock %}
