render error messages on signup/login

--- a/static/login.html
+++ b/static/login.html
@@ -5,7 +5,7 @@
     <p>We're happy to have you back!</p>
     <form action="/api/v1/login" method="post" id="login-form">
         <div class="mb-1 val" id="login-error">
-            
+            error message    
         </div>
         <div class="mb-1">
             <input type="email" name="email" class="form-control" id="email" placeholder="Email address" required>
