--- a/static/register.html
+++ b/static/register.html
@@ -5,7 +5,7 @@
     <p>Get started for free.</p>
     <form action="/api/v1/register" method="post" id="register-form">
         <div class="mb-1 val" id="register-error">
-            
+            error message
         </div>
         <div class="mb-1">
             <input type="email" name="email" class="form-control" id="email" placeholder="Email address" required>
